web-infras/parser/tests/fixtures/babel/core/scope/dupl-bind-class-class/output.txt
[SyntaxError]: Identifier has already been declared. (2,7)
2|class foo {};
 |     ^
